<resources>
    <string name="app_name">Quaky</string>
    <string name="newest_earthquake">Newest Earthquake</string>
    <string name="history">History</string>
    <string name="search_start">Start</string>
    <string name="search_limit">Limit</string>
    <string name="search_startdate">Start Date</string>
    <string name="search_enddate">End Date</string>
    <string name="search_searchbtn">Search</string>
    <string name="details">Details</string>
    <string name="filepath_lastearthquake">lastearthquake.json</string>

    <string name="link_template">&lt;a href="%%LINK%%">%%TEXT%%&lt;/a></string>

    <string name="appwidget_text">Quaky</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Shows the last earthquake registered</string>
</resources>