<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/AppTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="157dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/quaky_default"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/mainSiteLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="105dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppTitleText">

        <TextView
            android:id="@+id/lastEarthquakeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newest_earthquake"
            android:textAlignment="center"
            android:textColor="@color/quaky_second"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/lastEarthquakeContainer"
            android:layout_width="250dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:onClick="showLastEarthquakeDetail"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/lastEarthquakeDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="2dp"
                android:text="-"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/lastEarthquakeCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/border"
                android:padding="2dp"
                android:text="-"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/historyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:backgroundTint="@color/quaky_default"
            android:onClick="goToHistory"
            android:text="@string/history" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>