...
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityTitleText">

        <TextView
            android:id="@+id/detailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:linksClickable="true"
            android:text="-"
            android:textAlignment="center"
            android:textSize="24sp" />
...

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="400dp">

            <LinearLayout
                android:id="@+id/detailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>

...
